fix overflow issues in music page

--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -8,14 +8,19 @@ html {
   overflow-y: auto !important;
 }
 body {
-  height: 100vh;
-  max-height: 100%;
+  position: relative;
   margin: 0;
   padding: 0;
+  min-height: 100vh;
+  background: #09051a;
   display: flex;
   justify-content: center;
-  background: #09051a;
   align-items: center;
+}
+.app {
+  display: flex;
+  position: relative;
+  justify-content: flex-start;
 }
 .wrapper {
   position: relative;
